module9/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo-blue-green.k8prac.praktikum-services.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-green
                port:
                  number: 9898
